<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/moviedetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.moviedetail.MovieDetailActivity">

        <!-- Movie Poster -->
        <ImageView
            android:id="@+id/movie_image"
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:layout_margin="16dp"
            android:contentDescription="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop"/>


        <!-- Return back button -->
        <Button
            android:id="@+id/returnButton"
            android:layout_width="120dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/movie_image"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@color/secondary_color"
            android:text="@string/returnButton"
            />


        <!-- Movie Title -->
        <TextView
            android:id="@+id/movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/text_primary"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@id/movie_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/movie_image"
            android:text="@string/movie_title"/>

        <!-- Synopsis -->
        <TextView
            android:id="@+id/movie_synopsis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/movie_title"
            app:layout_constraintStart_toEndOf="@id/movie_image"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/movie_synopsis"/>

        <!-- Rating label -->
        <TextView
            android:id="@+id/rating_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_label"
            android:textSize="16sp"
            android:textColor="@color/text_primary"
            app:layout_constraintTop_toBottomOf="@id/returnButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>

        <!-- Movie Rating -->
        <TextView
            android:id="@+id/movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/text_primary"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/rating_label"
            app:layout_constraintTop_toBottomOf="@id/returnButton"/>

        <!-- Genres Label -->
        <TextView
            android:id="@+id/genres_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genres_label"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/text_primary"
            app:layout_constraintTop_toBottomOf="@id/movie_rating"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"/>

        <!-- Genres -->
        <TextView
            android:id="@+id/movie_genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:textSize="16sp"
            android:textColor="@color/text_primary"
            app:layout_constraintTop_toBottomOf="@id/genres_label"
            app:layout_constraintStart_toStartOf="parent"
            />

        <!-- Progress Bar -->
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.5"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>